Fix import modules dir
